--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ window.onload = typeLoop;
             <i class="fas fa-cogs fa-3x mb-3 text-primary"></i>
             <h5 class="card-title fw-bold">Aplicaciones Personalizadas</h5>
             <p class="card-text">Soluciones hechas a medida para tu negocio.</p>
-            <a href="/noblewebstudio-simple/apps.html" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
+            <a href="apps.html" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
               <i class="fas fa-eye"></i> Ver demo
             </a>
           </div>
