--- a/apps.html
+++ b/apps.html
@@ -99,7 +99,7 @@
       <!-- Empanadas Caseras -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="/noblewebstudio-simple/apps/app empanadas.png" alt="Empanadas Caseras">
+          <img src="apps/app empanadas.png" alt="Empanadas Caseras">
           <div class="card-body text-center">
             <h3>Empanadas Caseras</h3>
             <p>Tradición familiar con más de 20 años de historia. Ingredientes frescos, masa casera y mucho relleno.</p>
@@ -111,7 +111,7 @@
       <!-- Gestión Simple -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="/noblewebstudio-simple/apps/inventario ventas simple.png" alt="Gestión Simple">
+          <img src="apps/inventario ventas simple.png" alt="Gestión Simple">
           <div class="card-body text-center">
             <h3>Gestión Simple</h3>
             <p>Control de Compras, Ventas, Clientes y Ganancias utilizando localStorage. Dashboard simple y rápido.</p>
@@ -123,7 +123,7 @@
       <!-- Inventario & Ventas PRO -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="/noblewebstudio-simple/apps/inventario ventas pro.png" alt="Inventario & Ventas PRO">
+          <img src="apps/inventario ventas pro.png" alt="Inventario & Ventas PRO">
           <div class="card-body text-center">
             <h3>Inventario & Ventas PRO</h3>
             <p>Administra productos, clientes y ventas. Reportes claros y configuración inicial rápida.</p>
@@ -135,7 +135,7 @@
       <!-- Billetera Digital -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="/noblewebstudio-simple/apps/billetera virtual .png" alt="Billetera Digital">
+          <img src="/apps/billetera virtual .png" alt="Billetera Digital">
           <div class="card-body text-center">
             <h3>Billetera Digital</h3>
             <p>Controla tus ingresos y gastos con categorías, historial de movimientos y resumen visual de tu dinero.</p>
@@ -147,7 +147,7 @@
       <!-- Gestión de Invitados con QR -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="/noblewebstudio-simple/apps/app QR.png" alt="Gestión de Invitados">
+          <img src="apps/app QR.png" alt="Gestión de Invitados">
           <div class="card-body text-center">
             <h3>Gestión de Invitados</h3>
             <p>Agregá invitados, generá códigos QR y gestioná la asistencia fácilmente con nuestra app.</p>
@@ -163,3 +163,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
