--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ window.onload = typeLoop;
             <li><i class="fas fa-check-circle text-primary me-2"></i>Optimización para buscadores (SEO)</li>
             <li><i class="fas fa-check-circle text-primary me-2"></i>Soporte y mantenimiento continuo</li>
           </ul>
-         <a href="https://wa.me/59899946914?text=Quiero%20m%C3%A1s%20informaci%C3%B3n" target="_blank" class="btn btn-primary btn-lg mt-3 shadow">
+         <a href="https://codenobleweb.netlify.app/planes" target="_blank" class="btn btn-primary btn-lg mt-3 shadow">
          <i class="fas fa-comments me-1"></i> Consultanos Ahora
         </a>
         </div>
@@ -525,3 +525,4 @@ window.onload = typeLoop;
 </body>
 
 </html>
+
