--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ window.onload = typeLoop;
             <li><i class="fas fa-check-circle text-primary me-2"></i>Optimización para buscadores (SEO)</li>
             <li><i class="fas fa-check-circle text-primary me-2"></i>Soporte y mantenimiento continuo</li>
           </ul>
-         <a href="https://codenobleweb.netlify.app/planes" target="_blank" class="btn btn-primary btn-lg mt-3 shadow">
+         <a href="https://wa.me/59899946914?text=Quiero%20m%C3%A1s%20informaci%C3%B3n" target="_blank" class="btn btn-primary btn-lg mt-3 shadow">
          <i class="fas fa-comments me-1"></i> Consultanos Ahora
         </a>
         </div>
@@ -216,11 +216,125 @@ window.onload = typeLoop;
     </div>
   </section>
 
+
+  <!-- ============ SECCIÓN: ÚLTIMOS PROYECTOS (RESPONSIVE) ============ -->
+<section class="projects-pro py-5 bg-light" id="projects">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-4">
+      <i class="fas fa-briefcase me-2"></i>Últimos Proyectos
+    </h2>
+    <p class="text-center mb-5 text-muted">Algunas de las soluciones digitales que desarrollamos para nuestros clientes.</p>
+
+    <div class="row g-4">
+
+      <!-- ✅ CARD 1 — La Casa del Café -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm">
+          <div class="project-img">
+            <img src="cafe.png" alt="La Casa del Café">
+          </div>
+          <div class="project-content">
+            <h5 class="fw-bold">La Casa del Café</h5>
+            <p class="text-muted small">
+              Coffee shop artesanal en Las Piedras. Diseño cálido, menú, galería y página completa para su presencia local.
+            </p>
+            <span class="badge bg-brown">Café</span>
+            <span class="badge bg-secondary">Website</span>
+            <a href="https://lacasadelcafelp.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- ✅ CARD 2 — Barbería La Navaja -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm">
+          <div class="project-img">
+            <img src="/navaja.png" alt="Barbería La Navaja">
+          </div>
+          <div class="project-content">
+            <h5 class="fw-bold">Barbería La Navaja</h5>
+            <p class="text-muted small">
+              Sitio profesional para barbería clásica. Servicios, precios, galería y contacto integrado.
+            </p>
+            <span class="badge bg-dark">Barbería</span>
+            <span class="badge bg-secondary">Landing Page</span>
+            <a href="https://lanavajabarber.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- ✅ CARD 3 — Lavadero AP Motors -->
+      <div class="col-md-4">
+        <div class="project-card shadow-sm">
+          <div class="project-img">
+            <img src="/ap motor.png" alt="Lavadero AP Motors">
+          </div>
+          <div class="project-content">
+            <h5 class="fw-bold">Lavadero AP Motors</h5>
+            <p class="text-muted small">
+              Estética automotriz profesional. Servicios, precios dinámicos y sistema de reserva rápida.
+            </p>
+            <span class="badge bg-primary">Automotriz</span>
+            <span class="badge bg-secondary">Website</span>
+            <a href="https://lanavajabarber.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- ============ ESTILOS PARA LAS CARDS (UI/UX PRO) ============ -->
+<style>
+  .project-card {
+    background: #fff;
+    border-radius: 12px;
+    overflow: hidden;
+    transition: all 0.35s ease;
+  }
+
+  .project-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  }
+
+  .project-img img {
+    width: 100%;
+    height: 190px;
+    object-fit: cover;
+    transition: transform 0.4s ease;
+  }
+
+  .project-card:hover .project-img img {
+    transform: scale(1.05);
+  }
+
+  .project-content {
+    padding: 18px;
+  }
+
+  .badge {
+    font-size: 0.7rem;
+    padding: 6px 10px;
+    border-radius: 6px;
+  }
+
+  .bg-brown {
+    background: #8a5a3b;
+  }
+</style>
+
+
  <!-- Últimos Trabajos -->
   <section class="projects py-5 bg-light" id="projects">
     <div class="container text-center">
-      <h2 class="mb-4 fw-bold"><i class="fas fa-briefcase"></i> Últimos Proyectos</h2>
-      <p class="mb-5">Descubre algunos de los proyectos recientes desarrollados para nuestros clientes.</p>
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card h-100 shadow border-0">
@@ -228,9 +342,9 @@ window.onload = typeLoop;
             <div class="card-body">
               <h5 class="card-title fw-bold">Reiki y masajes</h5>
               <p class="card-text">Sitio web para centro de bienestar, con información sobre servicios de reiki y masajes.</p>
-                <a href="https://wa.me/59899946914?text=Hola%2C%20me%20interesa%20el%20sitio%20web%20para%20Reiki%20y%20masajes%20que%20vi%20en%20su%20web.%20%C2%BFMe%20pueden%20dar%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
-                  <i class="fas fa-eye"></i> Consultar por WhatsApp
-                </a>
+               <a href="http://plenitudconrosana.uy/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
             </div>
           </div>
         </div>
@@ -240,9 +354,9 @@ window.onload = typeLoop;
             <div class="card-body">
               <h5 class="card-title fw-bold">Sitio web para Community Manager</h5>
               <p class="card-text">Sitio web enfocado en las necesidades de un community manager.</p>
-                <a href="https://wa.me/59899946914?text=Hola%2C%20me%20interesa%20el%20sitio%20web%20para%20Community%20Manager%20que%20vi%20en%20su%20web.%20%C2%BFMe%20pueden%20dar%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
-                  <i class="fas fa-eye"></i> Consultar por WhatsApp
-                </a>
+               <a href="https://comunitymanager.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
             </div>
           </div>
         </div>
@@ -252,9 +366,9 @@ window.onload = typeLoop;
             <div class="card-body">
               <h5 class="card-title fw-bold">Aplicación para pedir empanadas</h5>
               <p class="card-text">Aplicación web para pedir empanadas, con panel de administración.</p>
-                <a href="https://wa.me/59899946914?text=Hola%2C%20me%20interesa%20la%20aplicaci%C3%B3n%20para%20pedir%20empanadas%20que%20vi%20en%20su%20web.%20%C2%BFMe%20pueden%20dar%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
-                  <i class="fas fa-eye"></i> Consultar por WhatsApp
-                </a>
+              <a href="https://apppedirempanadas.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
             </div>
           </div>
         </div>
@@ -265,9 +379,9 @@ window.onload = typeLoop;
     <div class="card-body">
       <h5 class="card-title fw-bold">Fitness Pro Equipment</h5>
       <p class="card-text">Venta, instalación y mantenimiento profesional de máquinas fitness. Equipos garantizados, financiación disponible y soporte 24/7.</p>
-      <a href="https://wa.me/59899946914?text=Hola%2C%20me%20interesa%20el%20proyecto%20Fitness%20Pro%20Equipment%20que%20vi%20en%20su%20web.%20%C2%BFMe%20pueden%20dar%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
-        <i class="fas fa-eye"></i> Consultar por WhatsApp
-      </a>
+<a href="https://equiposfitt.netlify.app/" target="_blank" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
     </div>
   </div>
 </div>
@@ -279,17 +393,15 @@ window.onload = typeLoop;
     <div class="card-body">
       <h5 class="card-title fw-bold">Fitness Store</h5>
       <p class="card-text">Tienda uruguaya de suplementos y accesorios deportivos. Productos 100% originales, envíos rápidos y atención personalizada por WhatsApp.</p>
-      <a href="https://wa.me/59899946914?text=Hola%2C%20me%20interesa%20el%20proyecto%20Fitness%20Store%20que%20vi%20en%20su%20web.%20%C2%BFMe%20pueden%20dar%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="btn btn-outline-primary d-flex align-items-center justify-content-center gap-2 mt-2">
-        <i class="fas fa-eye"></i> Consultar por WhatsApp
-      </a>
+      <a href="https://tiendafitt.netlify.app/" class="btn btn-primary w-100 mt-3">
+              Ver Demo <i class="fas fa-arrow-right ms-1"></i>
+            </a>
     </div>
   </div>
-</div>
-
+  </div>
       </div>
     </div>
   </section>
-
 
   <!-- Aplicaciones Desarrolladas -->
 
@@ -525,4 +637,3 @@ window.onload = typeLoop;
 </body>
 
 </html>
-
